# libnitrokey

./: .Dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  CommandFailedException.cpp  Dockerfile  Doxyfile.in  InvalidSlotException.h  Makefile  NK_C_API.cc  NK_C_API.h  NK_C_API_helpers.cpp  NK_C_API_helpers.h  NK_C_API_otp.cpp  NK_C_API_pws.cpp  NK_C_API_storage.cpp  NK_C_API_storage.h  NitrokeyManager.cc  NitrokeyManagerOTP.cc  NitrokeyManagerOTP.h  NitrokeyManagerPWS.cc  NitrokeyManagerPWS.h  NitrokeyManagerStorage.cpp  NitrokeyManagerStorage.h  README.md  RELEASE.md  TODO  TooLongStringException.cpp  command_id.cc  device.cc  hid_libusb.cc  libnitrokey.pc.in  libnitrokey.pro  log.cc  makefile  meson.build  meson_options.txt  misc.cc  (+10 more)
.github/workflows/: codeql-analysis.yml
ci-script/: build.sh  mxe.sh  package.sh
data/: 41-nitrokey.rules  41-nitrokey_old.rules  Pipfile  README.md  generate_udev_docs.py
include/: CommandFailedException.cpp  CommandFailedException.h  DeviceCommunicationExceptions.h  InvalidSlotException.h  LibraryException.h  LongOperationInProgressException.h  NKPro_commands.h  NKPro_commands_0.8.h  NKStorage_commands.h  NitrokeyManager.h  TooLongStringException.h  command.h  command_id.h  cxx_semantics.h  device.h  device_proto.h  dissect.h  log.h  misc.h  stick10_commands.h  stick10_commands_0.8.h  stick20_commands.h  toplevel.h
libnitrokey/: CommandFailedException.h  DeviceCommunicationExceptions.h  LibraryException.h  LongOperationInProgressException.h  NitrokeyManager.h  command.h  command_id.h  deprecated.h  device.h  device_proto.h  dissect.h  log.h  misc.h  nk_strndup.h  stick10_commands.h  stick10_commands_0.8.h  stick20_commands.h  version-libnk.h  version.h.in
python_bindings/: api.cpp
unittest/: Makefile  Pipfile  catch_main.cpp  conftest.py  constants.py  helpers.py  libnitrokey.py  libnk-tool.py  misc.py  pyproject.toml  requirements.txt  setup.py  test.cc  test1.cc  test2.cc  test3.cc  test_137.cc  test_C_API.cpp  test_HOTP.cc  test_bindings.py  test_command_ids_header.h  test_issues.cc  test_issues.py  test_library.py  test_memory.c  test_minimal.c  test_multiple.py  test_multiple_devices.cc  test_offline.cc  test_offline.py  test_pro.py  test_pro_bootloader.py  test_safe.cpp  test_storage.py  test_storage_issue98.py  test_strdup.cpp
